--- a/public/valiadmin/assets/css/main.css
+++ b/public/valiadmin/assets/css/main.css
@@ -14945,11 +14945,11 @@ be a descendant of the grid when it is being dragged.
           flex: 1 0 auto;
   color: #fff;
   text-align: center;
-  font-family: 'Niconne';
+  font-family: 'Times New Roman';
   padding: 0 15px;
-  font-size: 26px;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 50px;
+  line-height: 30px;
 }
 
 @media (min-width: 768px) {
